[MM-32450] Fix alignment of 3-dot menu on channels and widths of channels in mobile view

--- a/sass/layout/_sidebar-left.scss
+++ b/sass/layout/_sidebar-left.scss
@@ -306,7 +306,6 @@
     }
 
     .SidebarMenu {
-        height: 30px;
         opacity: 1;
 
         .dropdown-menu {
